# kuberos-cli

./: .gitignore  .kuberos.config  README.md  cli_autocomplete_test.py  endpoints.py  help_texts.py  kuberos.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/deploy_hello_world/: deploy_hello_world.yaml  hello_world.deployment.yaml
kuberoscli/: endpoints.py  kuberos_config.py  kuberoscli.py
kuberoscli/command_group/: base.py  cluster.py  config.py  deploy.py  fleet.py
kuberoscli/configs/: kuberos.config
manifest_examples/: batch_jobs.hello_world.yaml  cluster_inventory.yml  cluster_registration.yml  fastdds_nav2_ignition_deploy.yaml  fleet_manifest.yml  nav2_ignition_deploy.yaml  registry_token.yaml  short_deployment_manifest.yml  turtle4_ign_split_deploy.yaml
manifest_examples/batchjobs/: azure_batch_jobs.hello_world.yaml  azure_nav2_batch_evaluation.yaml  batch_jobs.hello_world.yaml  nav2_batch_evaluation.yaml  v2_batch_jobs.hello_world.yaml  v2_nav2_batch_evaluation.yaml
manifest_examples/deploy_hello_world/: hello_world_deployment.kuberos.yml  hello_world_deployment.yml
manifest_examples/deploy_turtlebot3/: turtlebot3_deployment.kuberos.yml
manifest_examples/nav2_edge/: cyclone_test_two_pods.yaml  nav2_demo_deploy.yaml  nav2_evaluation_deploy.yaml  turtlebot4_real_deploy.yaml
manifest_templates/: cluster_registration.yaml  deploy_rosmodules.yaml  fleet_manifest.yml
rosbags/: convert_status_to_csv.py  get_nav_duration.py
utils/: collect_data.py  example_cpu_utilization.json
(+14 files in other folders)
